EDAN01/minizinc-1.6/tests/type-inst-checking/minizinc/m-pars-undefined-bad.exp
m-pars-undefined-bad.mzn:8:
  symbol error: variable `pi' must be defined (did you forget to specify a data 
  file?)
m-pars-undefined-bad.mzn:9:
  symbol error: use of undefined variable `pi'
m-pars-undefined-bad.mzn:13:
  symbol error: variable `pre' must be defined (did you forget to specify a data 
  file?)
m-pars-undefined-bad.mzn:14:
  symbol error: use of undefined variable `pre'
m-pars-undefined-bad.mzn:18:
  symbol error: variable `pse' must be defined (did you forget to specify a data 
  file?)
m-pars-undefined-bad.mzn:19:
  symbol error: use of undefined variable `pse'
m-pars-undefined-bad.mzn:23:
  symbol error: variable `pb' must be defined (did you forget to specify a data 
  file?)
m-pars-undefined-bad.mzn:24:
  symbol error: use of undefined variable `pb'
m-pars-undefined-bad.mzn:28:
  symbol error: variable `pf' must be defined (did you forget to specify a data 
  file?)
m-pars-undefined-bad.mzn:29:
  symbol error: use of undefined variable `pf'
m-pars-undefined-bad.mzn:33:
  symbol error: variable `psi' must be defined (did you forget to specify a data 
  file?)
m-pars-undefined-bad.mzn:34:
  symbol error: use of undefined variable `psi'
m-pars-undefined-bad.mzn:38:
  symbol error: variable `api' must be defined (did you forget to specify a data 
  file?)
m-pars-undefined-bad.mzn:39:
  symbol error: use of undefined variable `api'
m-pars-undefined-bad.mzn:42:
  type-inst error: `var array' is not allowed
m-pars-undefined-bad.mzn:43:
  type-inst error: `var array' is not allowed
m-pars-undefined-bad.mzn:46:
  symbol error: variable `pS' must be defined (did you forget to specify a data 
  file?)
m-pars-undefined-bad.mzn:47:
  symbol error: use of undefined variable `pS'
m-pars-undefined-bad.mzn:53:
  symbol error: function `min' used as a type
m-pars-undefined-bad.mzn:54:
  symbol error: `no_such_type' undeclared
m-pars-undefined-bad.mzn:61:
  symbol error: let variable `pi' must be defined
m-pars-undefined-bad.mzn:61:
  symbol error: use of undefined let variable `pi'
m-pars-undefined-bad.mzn:61:
  symbol error: let variable `pi' must be assigned
% -- pretty-print after type-inst-checking --------------
int: pi;

int: pi2 = pi;

var int: vi;

var int: vi2 = vi;

1 .. 5: pre;

1 .. 5: pre2 = pre;

var 1 .. 5: vre;

var 1 .. 5: vre2 = vre;

{ 1, 2 }: pse;

{ 1, 2 }: pse2 = pse;

var { 1, 2 }: vse;

var { 1, 2 }: vse2 = vse;

bool: pb;

bool: pb2 = pb;

var bool: vb;

var bool: vb2 = vb;

float: pf;

float: pf2 = pf;

var float: vf;

var float: vf2 = vf;

set of int: psi;

set of int: psi2 = psi;

var set of 1 .. 5: vsi;

var set of 1 .. 5: vsi2 = vsi;

array[1 .. 3] of int: api;

array[1 .. 3] of int: api2 = api;

array[1 .. 3] of var int: avi;

array[1 .. 3] of var int: avi2 = avi;

var array[1 .. 3] of int: vai;

var array[1 .. 3] of int: vai2 = vai;

set of int: S = { 1, 2, 3 };

S: pS;

S: pS2 = pS;

var S: vS;

var S: vS2 = vS;

min: po;

no_such_type: t;

int: pi3 = let { int: pi = 1 } in pi;

var int: vi3 = 
  let { var int: vi = coerce(ti_par_int, ti_var_int, 1) } in vi;

int: pi4 = let { int: pi } in pi;

var int: vi4 = let { var int: vi } in vi;

solve satisfy;
